@@ -40,7 +40,10 @@ namespace nsclient {
 		}
 
 		void exit() {
-			core_->exitCore(true);
+			core_->stop_unload_plugins_pre();
+			core_->stop_exit_pre();
+			core_->stop_unload_plugins_post();
+			core_->stop_exit_post();
 		}
 
 		void set_current(std::wstring current) { current_ = current; }
