@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,121
-#define STRPRODUCTVER  "0,4,0,121"
-#define STRPRODUCTDATE "2012-01-12"
+#define PRODUCTVER     0,4,0,123
+#define STRPRODUCTVER  "0,4,0,123"
+#define STRPRODUCTDATE "2012-01-16"
 #endif // VERSION_HPP
