@@ -1,3 +1,3 @@
 version=0.4.0
-build=121
-date=2012-01-12
+build=123
+date=2012-01-16
